mata_user_defconfig: disable TSENS and BATTERY_BCL
They don't seem to be really used.
This fixes these dmesg errors:
[   38.787699] msm_thermal:therm_get_temp Unable to read thermal zone
sensor:-19
[   38.787709] msm_thermal:sensor_mgr_set_threshold Unable to read
temperature for zone:-19. err:-19
[   38.787713] msm_thermal:therm_get_temp Unable to read thermal zone
sensor:-19
[   38.787821] msm_thermal:sensor_mgr_set_threshold Unable to read
temperature for zone:-19. err:-19
[   38.787826] msm_thermal:therm_get_temp Unable to read thermal zone
sensor:-19
[   38.787829] msm_thermal:sensor_mgr_set_threshold Unable to read
temperature for zone:-19. err:-19
[   38.787832] msm_thermal:therm_get_temp Unable to read thermal zone
sensor:-19
[   38.787835] msm_thermal:sensor_mgr_set_threshold Unable to read
temperature for zone:-19. err:-19
[   38.787838] msm_thermal:therm_get_temp Unable to read thermal zone
sensor:-19
[   38.787841] msm_thermal:sensor_mgr_set_threshold Unable to read
temperature for zone:-19. err:-19
[   38.787844] msm_thermal:therm_get_temp Unable to read thermal zone
sensor:-19
[   38.787847] msm_thermal:sensor_mgr_set_threshold Unable to read
temperature for zone:-19. err:-19
[   38.787850] msm_thermal:therm_get_temp Unable to read thermal zone
sensor:-19
[   38.787853] msm_thermal:sensor_mgr_set_threshold Unable to read
temperature for zone:-19. err:-19
[   38.787857] msm_thermal:therm_get_temp Unable to read thermal zone
sensor:-19
[   38.787859] msm_thermal:sensor_mgr_set_threshold Unable to read
temperature for zone:-19. err:-19

...

[   38.807357] msm_thermal:therm_get_temp Unable to read thermal zone
sensor:-19
[   38.807367] msm_thermal:hotplug_init_cpu_offlined Unable to read
TSENS sensor:-19.

Signed-off-by: Yaroslav Furman <yaro330@gmail.com>
Signed-off-by: celtare21 <celtare21@gmail.com>

--- a/arch/arm64/configs/artemis_mata_defconfig
+++ b/arch/arm64/configs/artemis_mata_defconfig
@@ -2236,7 +2236,6 @@ CONFIG_QPNP_FG_GEN3=y
 # CONFIG_SMB1351_USB_CHARGER is not set
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
-CONFIG_BATTERY_BCL=y
 CONFIG_QPNP_SMB2=y
 CONFIG_SMB138X_CHARGER=y
 CONFIG_QPNP_QNOVO=y
@@ -2400,8 +2399,7 @@ CONFIG_CPU_THERMAL=y
 # CONFIG_THERMAL_EMULATION is not set
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
-CONFIG_THERMAL_MONITOR=y
-CONFIG_THERMAL_TSENS8974=y
+# CONFIG_THERMAL_TSENS8974 is not set
 # CONFIG_IMX_THERMAL is not set
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
