Defconfig: Disable MAGIC_SYSRQ, SECURITY_SELINUX_AVC_STAT and ACPI
Regen also

Signed-off-by: celtare21 <celtare21@gmail.com>

--- a/arch/arm64/configs/artemis_mata_defconfig
+++ b/arch/arm64/configs/artemis_mata_defconfig
@@ -359,7 +359,6 @@ CONFIG_PCI_MSI_IRQ_DOMAIN=y
 # CONFIG_PCI_PRI is not set
 # CONFIG_PCI_PASID is not set
 CONFIG_PCI_MSM=y
-CONFIG_PCI_LABEL=y
 
 #
 # PCI host controller drivers
@@ -482,7 +481,6 @@ CONFIG_RANDOMIZE_BASE=y
 #
 # Boot options
 #
-# CONFIG_ARM64_ACPI_PARKING_PROTOCOL is not set
 CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
@@ -585,7 +583,6 @@ CONFIG_INPUT_BOOST_FREQ_PERF=422400
 # CONFIG_CPUFREQ_DT is not set
 # CONFIG_ARM_BIG_LITTLE_CPUFREQ is not set
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
-# CONFIG_ACPI_CPPC_CPUFREQ is not set
 CONFIG_CPU_FREQ_MSM=y
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
@@ -1190,13 +1187,6 @@ CONFIG_OF_SLIMBUS=y
 # CONFIG_OF_OVERLAY is not set
 CONFIG_OF_BATTERYDATA=y
 # CONFIG_PARPORT is not set
-CONFIG_PNP=y
-# CONFIG_PNP_DEBUG_MESSAGES is not set
-
-#
-# Protocols
-#
-CONFIG_PNPACPI=y
 CONFIG_BLK_DEV=y
 CONFIG_BLK_DEV_NULL_BLK=y
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
@@ -1272,6 +1262,7 @@ CONFIG_QPNP_MISC=y
 # Texas Instruments shared transport line discipline
 #
 # CONFIG_TI_ST is not set
+# CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
 
 #
@@ -1620,7 +1611,6 @@ CONFIG_NET_VENDOR_WIZNET=y
 # CONFIG_WIZNET_W5300 is not set
 # CONFIG_FDDI is not set
 # CONFIG_HIPPI is not set
-# CONFIG_NET_SB1000 is not set
 CONFIG_PHYLIB=y
 
 #
@@ -1703,7 +1693,6 @@ CONFIG_CNSS_UTILS=y
 #
 # CONFIG_WAN is not set
 # CONFIG_VMXNET3 is not set
-# CONFIG_FUJITSU_ES is not set
 # CONFIG_RMNET is not set
 # CONFIG_ISDN is not set
 # CONFIG_NVM is not set
@@ -1957,7 +1946,6 @@ CONFIG_HW_RANDOM_MSM_LEGACY=y
 # PCMCIA character devices
 #
 # CONFIG_RAW_DRIVER is not set
-# CONFIG_HPET is not set
 # CONFIG_TCG_TPM is not set
 # CONFIG_DEVPORT is not set
 # CONFIG_MSM_SMD_PKT is not set
@@ -1969,7 +1957,6 @@ CONFIG_MSM_ADSPRPC=y
 # I2C support
 #
 CONFIG_I2C=y
-CONFIG_ACPI_I2C_OPREGION=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
 CONFIG_I2C_CHARDEV=y
@@ -2009,15 +1996,11 @@ CONFIG_I2C_HELPER_AUTO=y
 # CONFIG_I2C_VIAPRO is not set
 
 #
-# ACPI drivers
-#
-# CONFIG_I2C_SCMI is not set
-
-#
 # I2C system bus drivers (mostly embedded / system-on-chip)
 #
 # CONFIG_I2C_CADENCE is not set
 # CONFIG_I2C_CBUS_GPIO is not set
+# CONFIG_I2C_DESIGNWARE_PLATFORM is not set
 # CONFIG_I2C_DESIGNWARE_PCI is not set
 # CONFIG_I2C_EMEV2 is not set
 # CONFIG_I2C_GPIO is not set
@@ -2110,10 +2093,6 @@ CONFIG_PINCONF=y
 CONFIG_GENERIC_PINCONF=y
 # CONFIG_PINCTRL_AMD is not set
 # CONFIG_PINCTRL_SINGLE is not set
-# CONFIG_PINCTRL_BAYTRAIL is not set
-# CONFIG_PINCTRL_CHERRYVIEW is not set
-# CONFIG_PINCTRL_BROXTON is not set
-# CONFIG_PINCTRL_SUNRISEPOINT is not set
 CONFIG_PINCTRL_MSM=y
 # CONFIG_PINCTRL_APQ8064 is not set
 # CONFIG_PINCTRL_APQ8084 is not set
@@ -2122,7 +2101,6 @@ CONFIG_PINCTRL_MSM=y
 # CONFIG_PINCTRL_MSM8960 is not set
 # CONFIG_PINCTRL_MSM8X74 is not set
 # CONFIG_PINCTRL_MSM8916 is not set
-# CONFIG_PINCTRL_QDF2XXX is not set
 # CONFIG_PINCTRL_QCOM_SPMI_PMIC is not set
 # CONFIG_PINCTRL_QCOM_SSBI_PMIC is not set
 CONFIG_PINCTRL_MSM8998=y
@@ -2135,7 +2113,6 @@ CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_GPIOLIB=y
 CONFIG_GPIO_DEVRES=y
 CONFIG_OF_GPIO=y
-CONFIG_GPIO_ACPI=y
 CONFIG_GPIOLIB_IRQCHIP=y
 CONFIG_GPIO_SYSFS=y
 
@@ -2144,7 +2121,6 @@ CONFIG_GPIO_SYSFS=y
 #
 # CONFIG_GPIO_74XX_MMIO is not set
 # CONFIG_GPIO_ALTERA is not set
-# CONFIG_GPIO_AMDPT is not set
 # CONFIG_GPIO_DWAPB is not set
 # CONFIG_GPIO_GENERIC_PLATFORM is not set
 # CONFIG_GPIO_GRGPIO is not set
@@ -2383,11 +2359,6 @@ CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 # CONFIG_SENSORS_W83L786NG is not set
 # CONFIG_SENSORS_W83627HF is not set
 # CONFIG_SENSORS_W83627EHF is not set
-
-#
-# ACPI drivers
-#
-# CONFIG_SENSORS_ACPI_POWER is not set
 CONFIG_THERMAL=y
 CONFIG_THERMAL_HWMON=y
 CONFIG_THERMAL_OF=y
@@ -3571,7 +3542,6 @@ CONFIG_DMADEVICES=y
 # DMA Devices
 #
 CONFIG_DMA_ENGINE=y
-CONFIG_DMA_ACPI=y
 CONFIG_DMA_OF=y
 # CONFIG_AMBA_PL08X is not set
 # CONFIG_FSL_EDMA is not set
@@ -3834,7 +3804,6 @@ CONFIG_REMOTE_SPINLOCK_MSM=y
 # Clock Source drivers
 #
 CONFIG_CLKSRC_OF=y
-CONFIG_CLKSRC_ACPI=y
 CONFIG_CLKSRC_PROBE=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
@@ -4143,7 +4112,6 @@ CONFIG_QCOM_TADC=y
 #
 # Light sensors
 #
-# CONFIG_ACPI_ALS is not set
 # CONFIG_ADJD_S311 is not set
 # CONFIG_AL3320A is not set
 # CONFIG_APDS9300 is not set
@@ -4288,25 +4256,7 @@ CONFIG_SENSORS_SSC=y
 #
 # Firmware Drivers
 #
-CONFIG_ACPI=y
-CONFIG_ACPI_GENERIC_GSI=y
-CONFIG_ACPI_CCA_REQUIRED=y
-# CONFIG_ACPI_DEBUGGER is not set
-# CONFIG_ACPI_EC_DEBUGFS is not set
-CONFIG_ACPI_BUTTON=y
-CONFIG_ACPI_FAN=y
-# CONFIG_ACPI_DOCK is not set
-CONFIG_ACPI_PROCESSOR=y
-CONFIG_ACPI_HOTPLUG_CPU=y
-CONFIG_ACPI_THERMAL=y
-# CONFIG_ACPI_CUSTOM_DSDT is not set
-# CONFIG_ACPI_DEBUG is not set
-# CONFIG_ACPI_PCI_SLOT is not set
-CONFIG_ACPI_CONTAINER=y
-# CONFIG_ACPI_HED is not set
-# CONFIG_ACPI_CUSTOM_METHOD is not set
-CONFIG_ACPI_REDUCED_HARDWARE_ONLY=y
-# CONFIG_PMIC_OPREGION is not set
+# CONFIG_ACPI is not set
 
 #
 # File systems
@@ -4504,8 +4454,7 @@ CONFIG_DEBUG_FS=y
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
 CONFIG_FRAME_POINTER=y
-CONFIG_MAGIC_SYSRQ=y
-CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
+# CONFIG_MAGIC_SYSRQ is not set
 # CONFIG_DEBUG_KERNEL is not set
 
 #
@@ -4642,7 +4591,7 @@ CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
 CONFIG_SECURITY_SELINUX_DEVELOP=y
-CONFIG_SECURITY_SELINUX_AVC_STATS=y
+# CONFIG_SECURITY_SELINUX_AVC_STATS is not set
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
 CONFIG_SECURITY_SMACK=y
