--- a/arch/arm64/configs/artemis_mata_defconfig
+++ b/arch/arm64/configs/artemis_mata_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.150 Kernel Configuration
+# Linux/arm64 4.4.152 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -26,6 +26,7 @@ CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_NEED_SG_DMA_LENGTH=y
 CONFIG_SMP=y
+CONFIG_HOTPLUG_SIZE_BITS=30
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
 CONFIG_SWIOTLB=y
@@ -33,9 +34,12 @@ CONFIG_IOMMU_HELPER=y
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_FIX_EARLYCON_MEM=y
 CONFIG_PGTABLE_LEVELS=3
+# CONFIG_MSM_GVM is not set
+# CONFIG_MSM_GVM_QUIN is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
+CONFIG_THREAD_INFO_IN_TASK=y
 
 #
 # General setup
@@ -401,6 +405,8 @@ CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
+CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
+CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE=y
 CONFIG_ARCH_NR_GPIO=1024
 CONFIG_QCOM_TLB_EL2_HANDLER=y
 # CONFIG_NUMA is not set
@@ -435,6 +441,7 @@ CONFIG_HAVE_MEMBLOCK=y
 CONFIG_NO_BOOTMEM=y
 CONFIG_MEMORY_ISOLATION=y
 # CONFIG_HAVE_BOOTMEM_INFO_NODE is not set
+# CONFIG_MEMORY_HOTPLUG is not set
 CONFIG_SPLIT_PTLOCK_CPUS=4
 CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
@@ -466,6 +473,7 @@ CONFIG_VM_MAX_READAHEAD=2048
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
+CONFIG_UNMAP_KERNEL_AT_EL0=y
 # CONFIG_HARDEN_BRANCH_PREDICTOR is not set
 # CONFIG_ARMV8_DEPRECATED is not set
 CONFIG_ARM64_SW_TTBR0_PAN=y
@@ -556,13 +564,13 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
+CONFIG_CPU_FREQ_TIMES=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
@@ -571,7 +579,6 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_BOOST is not set
-# CONFIG_CPU_FREQ_GOV_SCHED is not set
 # CONFIG_CPU_FREQ_GOV_SCHEDUTIL is not set
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_INPUT_BOOST_DURATION_MS=64
@@ -1115,9 +1122,9 @@ CONFIG_NFC_CXD224X_VEN=y
 CONFIG_NFC_CXD224X_RST=y
 CONFIG_NFC_NQ=y
 # CONFIG_LWTUNNEL is not set
-CONFIG_DST_CACHE=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
+CONFIG_DST_CACHE=y
 CONFIG_HAVE_BPF_JIT=y
 CONFIG_HAVE_EBPF_JIT=y
 
@@ -1246,6 +1253,7 @@ CONFIG_HDCP_QSEECOM=y
 # CONFIG_PROFILER is not set
 CONFIG_UID_SYS_STATS=y
 CONFIG_QPNP_MISC=y
+# CONFIG_UID_SYS_STATS_DEBUG is not set
 # CONFIG_MEMORY_STATE_TIME is not set
 # CONFIG_C2PORT is not set
 
@@ -2064,8 +2072,10 @@ CONFIG_SPI_QUP=y
 #
 CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_TLE62X0 is not set
+# CONFIG_SPI_SLAVE is not set
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
+CONFIG_VIRTSPMI_MSM_PMIC_ARB=y
 # CONFIG_HSI is not set
 
 #
@@ -2216,6 +2226,8 @@ CONFIG_POWER_RESET_SYSCON=y
 #
 # Qualcomm Technologies Inc Charger and Fuel Gauge support
 #
+# CONFIG_QPNP_SMBCHARGER is not set
+# CONFIG_QPNP_FG is not set
 CONFIG_QPNP_FG_GEN3=y
 # CONFIG_SMB135X_CHARGER is not set
 # CONFIG_SMB1351_USB_CHARGER is not set
@@ -2945,6 +2957,7 @@ CONFIG_QTI_PP=y
 CONFIG_SND_SOC_CPE=y
 # CONFIG_SND_SOC_INT_CODEC is not set
 # CONFIG_SND_SOC_EXT_CODEC is not set
+# CONFIG_SND_SOC_MSM8996_VM is not set
 CONFIG_SND_SOC_MSM8998=y
 # CONFIG_SND_SOC_QCOM is not set
 
@@ -3263,6 +3276,7 @@ CONFIG_QPNP_USB_PDPHY=y
 # CONFIG_USB_LINK_LAYER_TEST is not set
 # CONFIG_USB_CHAOSKEY is not set
 # CONFIG_USB_QTI_KS_BRIDGE is not set
+# CONFIG_USB_QCOM_DIAG_BRIDGE is not set
 
 #
 # USB Physical Layer drivers
@@ -3406,6 +3420,7 @@ CONFIG_LEDS_CLASS=y
 #
 # CONFIG_LEDS_BLINKM is not set
 CONFIG_LEDS_QPNP=y
+# CONFIG_LEDS_QPNP_FLASH is not set
 CONFIG_LEDS_QPNP_FLASH_V2=y
 CONFIG_LEDS_QPNP_WLED=y
 CONFIG_LEDS_SYSCON=y
@@ -3698,6 +3713,7 @@ CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
 CONFIG_ONESHOT_SYNC=y
 # CONFIG_ONESHOT_SYNC_USER is not set
+# CONFIG_ANDROID_VSOC is not set
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 # CONFIG_ION_DUMMY is not set
@@ -3768,7 +3784,6 @@ CONFIG_GSI=y
 CONFIG_IPA3=y
 CONFIG_RMNET_IPA3=y
 # CONFIG_IPA_UT is not set
-# CONFIG_SSM is not set
 CONFIG_GPIO_USB_DETECT=y
 CONFIG_MSM_MHI=y
 CONFIG_MSM_MHI_UCI=y
@@ -3847,6 +3862,9 @@ CONFIG_ARM_SMMU=y
 #
 # SOC (System On Chip) specific Drivers
 #
+# CONFIG_MSM_HAB is not set
+# CONFIG_MSM_AGL is not set
+# CONFIG_MSM_PASR is not set
 # CONFIG_MSM_INRUSH_CURRENT_MITIGATION is not set
 # CONFIG_QCOM_COMMON_LOG is not set
 CONFIG_MSM_SMEM=y
@@ -3909,6 +3927,7 @@ CONFIG_MSM_QDSP6_PDR=y
 CONFIG_MSM_QDSP6_NOTIFIER=y
 CONFIG_MSM_ADSP_LOADER=y
 # CONFIG_MSM_CDSP_LOADER is not set
+# CONFIG_MSM_LPASS_RESOURCE_MANAGER is not set
 CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
 CONFIG_MSM_SUBSYSTEM_RESTART=y
@@ -3935,6 +3954,7 @@ CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_QCOM_CX_IPEAK is not set
 # CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_CE is not set
 # CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_UE is not set
+# CONFIG_QCOM_QDSS_BRIDGE is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SUNXI_SRAM is not set
 # CONFIG_SOC_TI is not set
@@ -4254,6 +4274,7 @@ CONFIG_HAVE_ARM_SMCCC=y
 # CONFIG_MSM_TZ_LOG is not set
 # CONFIG_BIF is not set
 CONFIG_SENSORS_SSC=y
+# CONFIG_TEE is not set
 
 #
 # Firmware Drivers
@@ -4288,6 +4309,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
+# CONFIG_FS_ENCRYPTION is not set
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
@@ -4334,6 +4356,7 @@ CONFIG_PROC_FS=y
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
 # CONFIG_PROC_CHILDREN is not set
+CONFIG_PROC_UID=y
 CONFIG_KERNFS=y
 CONFIG_SYSFS=y
 CONFIG_TMPFS=y
@@ -4468,7 +4491,7 @@ CONFIG_FRAME_POINTER=y
 CONFIG_HAVE_DEBUG_KMEMLEAK=y
 # CONFIG_DEBUG_MEMORY_INIT is not set
 CONFIG_HAVE_ARCH_KASAN=y
-# CONFIG_DEBUG_REFCOUNT is not set
+# CONFIG_KASAN is not set
 
 #
 # Debug Lockups and Hangs
@@ -4515,6 +4538,7 @@ CONFIG_DISABLE_TRACE_PRINTK=y
 CONFIG_TRACING_SUPPORT=y
 CONFIG_FTRACE=y
 # CONFIG_FUNCTION_TRACER is not set
+# CONFIG_PREEMPTIRQ_EVENTS is not set
 # CONFIG_IRQSOFF_TRACER is not set
 # CONFIG_PREEMPT_TRACER is not set
 # CONFIG_SCHED_TRACER is not set
@@ -4713,6 +4737,7 @@ CONFIG_CRYPTO_DES=y
 # CONFIG_CRYPTO_CHACHA20 is not set
 # CONFIG_CRYPTO_SEED is not set
 # CONFIG_CRYPTO_SERPENT is not set
+# CONFIG_CRYPTO_SPECK is not set
 # CONFIG_CRYPTO_TEA is not set
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_TWOFISH_COMMON=y
@@ -4775,6 +4800,7 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
+# CONFIG_CRYPTO_SPECK_NEON is not set
 CONFIG_BINARY_PRINTF=y
 
 #
