Defconfig: Disable Eagle and Dolby license
Signed-off-by: celtare21 <celtare21@gmail.com>

--- a/arch/arm64/configs/artemis_mata_defconfig
+++ b/arch/arm64/configs/artemis_mata_defconfig
@@ -2951,8 +2951,8 @@ CONFIG_SND_SOC_MSM_QDSP6V2_INTF=y
 CONFIG_SND_SOC_QDSP6V2=y
 # CONFIG_SND_SOC_QDSP_DEBUG is not set
 # CONFIG_DOLBY_DS2 is not set
-CONFIG_DOLBY_LICENSE=y
-CONFIG_DTS_EAGLE=y
+# CONFIG_DOLBY_LICENSE is not set
+# CONFIG_DTS_EAGLE is not set
 CONFIG_DTS_SRS_TM=y
 CONFIG_QTI_PP=y
 # CONFIG_QTI_PP_AUDIOSPHERE is not set
