--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -741,6 +741,13 @@ config MSM_PERFORMANCE_HOTPLUG_ON
 	 functionality of hot plugging cores through msm_performance if there is
 	 no default core-control driver available.
 
+config MSM_PERFORMANCE_SET_FREQ
+	bool "Enable or disable the capability of the msm_performance driver to set min/max freqs"
+	depends on MSM_PERFORMANCE
+	default y
+	help
+	 Setting this flag to false will disable msm_performance from being able to set the minumum and maximum freqs of the cpu, disabling userspace boosting
+
 endif # ARCH_QCOM
 
 config MSM_SUBSYSTEM_RESTART
