--- a/arch/arm64/configs/artemis_mata_defconfig
+++ b/arch/arm64/configs/artemis_mata_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.157 Kernel Configuration
+# Linux/arm64 4.4.158 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -462,6 +462,7 @@ CONFIG_CMA_AREAS=7
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_ZSMALLOC_STAT is not set
+CONFIG_VMAP_LAZY_PURGING_FACTOR=32
 CONFIG_GENERIC_EARLY_IOREMAP=y
 # CONFIG_ZCACHE is not set
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
@@ -3935,6 +3936,7 @@ CONFIG_MSM_ADSP_LOADER=y
 # CONFIG_MSM_LPASS_RESOURCE_MANAGER is not set
 CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
+CONFIG_MSM_PERFORMANCE_SET_FREQ=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 # CONFIG_MSM_SYSMON_COMM is not set
 CONFIG_MSM_PIL=y
@@ -4577,7 +4579,7 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_UDELAY is not set
 # CONFIG_MEMTEST is not set
-# CONFIG_PANIC_ON_DATA_CORRUPTION is not set
+# CONFIG_BUG_ON_DATA_CORRUPTION is not set
 CONFIG_CC_WERROR=y
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
