Defconfig: Disable MSM_PERFORMANCE_SET_FREQ
Stop MSM_PERFORMANCE from doing unnecessary boosts

Signed-off-by: celtare21 <celtare21@gmail.com>

--- a/arch/arm64/configs/artemis_mata_defconfig
+++ b/arch/arm64/configs/artemis_mata_defconfig
@@ -3936,7 +3936,7 @@ CONFIG_MSM_ADSP_LOADER=y
 # CONFIG_MSM_LPASS_RESOURCE_MANAGER is not set
 CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
-CONFIG_MSM_PERFORMANCE_SET_FREQ=y
+# CONFIG_MSM_PERFORMANCE_SET_FREQ is not set
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 # CONFIG_MSM_SYSMON_COMM is not set
 CONFIG_MSM_PIL=y
