--- a/arch/arm64/configs/artemis_mata_defconfig
+++ b/arch/arm64/configs/artemis_mata_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.158 Kernel Configuration
+# Linux/arm64 4.4.160 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -96,7 +96,7 @@ CONFIG_HIGH_RES_TIMERS=y
 #
 # CPU/Task time and stats accounting
 #
-# CONFIG_TICK_CPU_ACCOUNTING is not set
+CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
 # CONFIG_SCHED_WALT is not set
@@ -141,6 +141,7 @@ CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 # CONFIG_MEMCG is not set
+# CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
@@ -198,7 +199,9 @@ CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
 # CONFIG_USERFAULTFD is not set
 CONFIG_PCI_QUIRKS=y
-# CONFIG_MEMBARRIER is not set
+CONFIG_MEMBARRIER=y
+CONFIG_RSEQ=y
+CONFIG_ARCH_HAS_MEMBARRIER_SYNC_CORE=y
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_USE_VMALLOC=y
@@ -230,8 +233,10 @@ CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_GENERIC_IDLE_POLL_SETUP=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
+CONFIG_HAVE_RSEQ=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
+CONFIG_HAVE_HW_BREAKPOINT=y
 CONFIG_HAVE_PERF_REGS=y
 CONFIG_HAVE_PERF_USER_STACK_DUMP=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
@@ -429,7 +434,10 @@ CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
 CONFIG_ARCH_SELECT_MEMORY_MODEL=y
 CONFIG_HAVE_ARCH_PFN_VALID=y
+CONFIG_HW_PERF_EVENTS=y
 CONFIG_ARM64_REG_REBALANCE_ON_CTX_SW=y
+# CONFIG_PERF_EVENTS_USERMODE is not set
+# CONFIG_PERF_EVENTS_RESET_PMU_DEBUGFS is not set
 CONFIG_SYS_SUPPORTS_HUGETLBFS=y
 CONFIG_ARCH_WANT_HUGE_PMD_SHARE=y
 CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
@@ -618,8 +626,6 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
-CONFIG_WIREGUARD=y
-# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
@@ -1180,6 +1186,9 @@ CONFIG_CMA_ALIGNMENT=8
 #
 # Bus devices
 #
+# CONFIG_ARM_CCI400_PMU is not set
+# CONFIG_ARM_CCI500_PMU is not set
+# CONFIG_ARM_CCN is not set
 # CONFIG_VEXPRESS_CONFIG is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
@@ -3714,8 +3723,10 @@ CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 # CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
-# CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES is not set
 CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=64
+CONFIG_ANDROID_SIMPLE_LMK_KSWAPD_TIMEOUT=100
+CONFIG_ANDROID_SIMPLE_LMK_OOM_TIMEOUT=50
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
@@ -3874,6 +3885,7 @@ CONFIG_ARM_SMMU=y
 # CONFIG_MSM_AGL is not set
 # CONFIG_MSM_PASR is not set
 # CONFIG_MSM_INRUSH_CURRENT_MITIGATION is not set
+# CONFIG_MSM_PFE_WA is not set
 # CONFIG_QCOM_COMMON_LOG is not set
 CONFIG_MSM_SMEM=y
 CONFIG_QPNP_HAPTIC=y
@@ -4253,6 +4265,7 @@ CONFIG_PHY_QCOM_UFS=y
 #
 # Performance monitor support
 #
+CONFIG_ARM_PMU=y
 # CONFIG_RAS is not set
 # CONFIG_THUNDERBOLT is not set
 
@@ -4612,6 +4625,7 @@ CONFIG_ENCRYPTED_KEYS=y
 # CONFIG_PFT is not set
 CONFIG_PFK=y
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
+# CONFIG_SECURITY_PERF_EVENTS_RESTRICT is not set
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
 CONFIG_SECURITY_NETWORK=y
